# galatea

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Jenkinsfile  LICENSE  README.md  api.html  cli.html  dev_env.html  develop.html  genindex.html  include_dev_env.html  index.html  merge-data.html  objects.inv  pylock.toml  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  sonar-project.properties  tox.ini  workflow.html
.doctrees/: api.doctree  cli.doctree  dev_env.doctree  develop.doctree  environment.pickle  include_dev_env.doctree  index.doctree  merge-data.doctree  workflow.doctree
.doctrees/commands/: authorized-terms.doctree  clean-tsv.doctree  config.doctree  merge-data.doctree
.doctrees/galatea/: clean_tsv.doctree  merge_data.doctree  resolve_authorized_terms.doctree  validate_authorized_terms.doctree
.doctrees/reference/: getmarc_merge_mapper.doctree  reference.doctree
.doctrees/workflows/: create_new_merge_profile.doctree  merge_data_workflow.doctree  resolving_authorized_marc.doctree
.github/workflows/: documentation.yml
_sources/: cli.rst.txt  dev_env.md.txt  index.rst.txt  merge-data.rst.txt  workflow.rst.txt
_sources/commands/: authorized-terms.rst.txt  clean-tsv.rst.txt  merge-data.rst.txt
_sources/galatea/: clean_tsv.rst.txt  validate_authorized_terms.rst.txt
_sources/reference/: reference.rst.txt
_sources/workflows/: merge_data_workflow.rst.txt
_static/: alabaster.css  basic.css
ci/docker/linux/jenkins/: Dockerfile  apt-packages.txt
commands/: authorized-terms.html  clean-tsv.html  config.html  merge-data.html
contrib/: bootstrap_standalone_cli.py  bootstrap_standalone_gui.py  create_homebrew_formula.py  create_mac_distrib.sh  create_standalone.py  create_windows_distrib.bat  create_windows_distrib.ps1  galatea_formula.rb.jinja2  test-apple-package.sh  test-windows-package.ps1
contrib/hooks/: hook-galatea.py
docs/: api.rst  cli.rst  conf.py  dev_env.md  develop.rst  include_dev_env.rst  index.rst  workflow.rst
docs/commands/: authorized-terms.rst  config.rst  merge-data.rst
docs/galatea/: merge_data.rst  resolve_authorized_terms.rst
docs/reference/: getmarc_merge_mapper.rst
docs/workflows/: authorized_terms_transformation.tsv  create_new_merge_profile.rst  merge_data_workflow.rst  resolving_authorized_marc.rst
galatea/: __main__.py  clean_tsv.html  clean_tsv.py  cli.py  data_file.py  marc.py  merge_data.html  modifiers.py  resolve_authorized_terms.html  resolve_authorized_terms.py  tsv.py  validate_authorized_terms.html  validate_authorized_terms.py
reference/: getmarc_merge_mapper.html  reference.html
requirements/: requirements-dev.in  requirements.in
src/galatea/: __init__.py  __main__.py  clean_tsv.py  cli.py  command_descriptions.py  config.py  marc.py  merge_data.py  modifiers.py  relator_terms.txt  resolve_authorized_terms.py  tsv.py  utils.py  validate_authorized_terms.py
src/galatea/gui/: __init__.py  bootstrap_speedwagon.py  main.py  speedwagon_plugin.py
src/galatea/gui/workflows/: __init__.py  authorized_terms_workflows.py  clean_tsv_workflows.py  merge_data_workflows.py  shared_validators.py
tests/: test_clean_tsv.py  test_cli.py  test_config.py  test_data_file.py  test_gui_bootstrap.py  test_merge_data.py  test_modifiers.py  test_resolve_authorized_terms.py  test_speedwagon_workflows.py  test_tsv.py  test_validate_authorized_terms.py
vars/: runJenkinsPipeline.groovy
workflows/: create_new_merge_profile.html  merge_data_workflow.html  resolving_authorized_marc.html
