[project]
name = "galatea"
version = "0.3.1"
description = "Used for cleaning up metadata used by UIUC metadata"
requires-python = ">= 3.10"
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
license = { file="LICENSE"}
readme = { file= "README.md", content-type="text/markdown" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: University of Illinois/NCSA Open Source License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving"

]
dependencies = [
    "requests",
    "argcomplete>=3.6"
]

[project.scripts]
galatea = "galatea.cli:main"

[build-system]
requires = ["setuptools>=75.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["galatea"]
zip-safe = true

[tool.setuptools.package-data]
"galatea" = [
    "relator_terms.txt"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 79
exclude = ["contrib/hooks"]

[tool.ruff.lint]
# Add "Q" to the list of enabled codes.
select = ["E4", "E7", "E9", "F", "E3", "PLW", "PLC", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]