[project]
name = "galatea"
version = "0.4.1"
description = "Used for cleaning up metadata used by UIUC metadata"
requires-python = ">= 3.10"
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
license = "NCSA"
license-files = ["LICENSE"]
readme = { file= "README.md", content-type="text/markdown" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving"

]
dependencies = [
    "requests",
    "argcomplete>=3.6",
    "jinja2",
    "tomli >= 1.1.0 ; python_version < '3.11'"
]

[project.scripts]
galatea = "galatea.cli:main"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["galatea"]
zip-safe = true
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"galatea" = [
    "relator_terms.txt"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_merge_prerelease = true
changelog_start_rev = "v0.0.1"


[tool.mypy]
mypy_path = "src"

[tool.ruff]
line-length = 79
exclude = ["contrib/hooks"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E3", "PLW", "PLC", "D"]
ignore = ["D203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"docs/conf.py" = ["D"]